--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>LiveTrace</title>
@@ -7,7 +8,16 @@
 <body>
     <input type="text" id="username" placeholder="Enter your name" />
     <div id="status"></div>
-    <div id="map"></div>
+    <div id="geofence-alert"></div>
+    <div id="map" style="height: 500px;"></div>
+    
+    <input type="text" id="lat" placeholder="Latitude" />
+    <input type="text" id="lng" placeholder="Longitude" />
+    <button id="set-marker">Set Marker</button>
+    
+    <input type="text" id="message" placeholder="Enter your message" />
+    <button id="send-message">Send Message</button>
+    <div id="messages"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js" integrity="sha512-puJW3E/qXDqYp9IfhAI54BJEaWIfloJ7JWs7OeD5i6ruC9JZL1gERT1wjtwXFlh7CjE7ZJ+/vcRZRkIYIb6p4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
