--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,15 +8,27 @@
 <body>
     <input type="text" id="username" placeholder="Enter your name" />
     <div id="status"></div>
-    <div id="geofence-alert"></div>
     <div id="map" style="height: 500px;"></div>
-    
-    <input type="text" id="lat" placeholder="Latitude" />
-    <input type="text" id="lng" placeholder="Longitude" />
-    <button id="set-marker">Set Marker</button>
-    
-    <input type="text" id="message" placeholder="Enter your message" />
-    <button id="send-message">Send Message</button>
+
+    <div>
+        <input type="number" id="lat" placeholder="Latitude" step="any">
+        <input type="number" id="lng" placeholder="Longitude" step="any">
+        <button id="set-marker">Set Marker</button>
+    </div>
+
+    <div>
+        <input type="number" id="geofence-lat" placeholder="Geofence Latitude" step="any">
+        <input type="number" id="geofence-lng" placeholder="Geofence Longitude" step="any">
+        <input type="number" id="geofence-radius" placeholder="Geofence Radius (meters)" step="any">
+        <button id="set-geofence">Set Geofence</button>
+    </div>
+
+    <div id="geofence-alert"></div>
+
+    <div>
+        <input type="text" id="message" placeholder="Enter a message">
+        <button id="send-message">Send Message</button>
+    </div>
     <div id="messages"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js" integrity="sha512-puJW3E/qXDqYp9IfhAI54BJEaWIfloJ7JWs7OeD5i6ruC9JZL1gERT1wjtwXFlh7CjE7ZJ+/vcRZRkIYIb6p4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
