Report Incidents updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
     <div class="form-overlay" id="incidentListOverlay">
         <div class="form-container">
             <span class="form-close" id="closeIncidentList">&times;</span>
-            <h2>Reported Incidents</h2>
+            <h2>Reported Incident</h2>
             <div id="incident-list"></div>
         </div>
     </div>
