Incident list bug solved

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -195,6 +195,7 @@
                 <input type="number" id="incident-lng" placeholder="Incident Longitude" step="any" required>
                 <input type="text" id="incident-description" placeholder="Incident Description" required>
                 <button type="submit" id="report-incident">Report Incident</button>
+                 <div id="incident-list"></div>
             </form>
         </div>
     </div>
@@ -205,6 +206,7 @@
             <span class="form-close" id="closeIncidentList">&times;</span>
             <h2>Reported Incidents</h2>
             <div id="incident-list"></div>
+            <div id="messages"></div>
         </div>
     </div>
 
